# benchcat

./: .clang-format  .gitignore  CMakeLists.txt  crt.cpp  main.cpp
